--- a/src/sass/components/articles/_article-card.scss
+++ b/src/sass/components/articles/_article-card.scss
@@ -220,14 +220,14 @@
   position: absolute;
   top: $mobile-space;
   left: $mobile-space;
-  color: black;
+  color: var(--titles-color);
   letter-spacing: -0.025px;
   line-height: 100%;
   font-size: 0.75rem;
   font-weight: 500;
 
   padding: 5px 5px;
-  background-color: white;
+  border: 1px solid gray;
   border-radius: 5px;
   display: inline-block;
 
